# thepacketwizards

./: .gitignore  Dockerfile  docker-compose-dev.yaml  docker-compose.yaml
env/: web.dev
nginx/: nginx.conf
web/: manage.py  pyproject.toml
web/blog/: admin.py  feed.py  forms.py  models.py  tasks.py  urls.py  views.py
web/blog/migrations/: 0001_initial.py  0006_auto_20200302_2306.py  0007_auto_20200405_0942.py  0008_auto_20200405_1011.py  0009_auto_20200405_1130.py  0010_auto_20201003_2018.py  0011_auto_20201003_2103.py  0012_twitterpost_task_id.py
web/blog/models/: Author.py  BlogCategory.py  BlogPost.py  BlogSeries.py  BlogTag.py  TwitterPost.py  __init__.py
web/blog/views/: BlogIndex.py
web/requirements/: development.txt  production.txt
web/static_root/css/: blog_style.css  codehilite.css
web/statics/css/: blog_style.css  index_style.css
web/templates/: 404.html
web/templates/blog/: base.html  blog_post.html  draft_blog_post.html  draft_index.html  index.html
web/templates/index/: base.html
web/thepacketwizards/: __init__.py  celery.py  settings.py  sitemap.py  views.py
